more assets and styles

--- a/index.html
+++ b/index.html
@@ -26,31 +26,45 @@
 
 	<div class="container">
 		<ul>
-			<li>
+			<li class="inperson-impersonator"
+				onClick="openInfo()">
 				<p>Inperson impersonator</p>
 			</li>
-			<li>
+			<li class="extroverter"
+				onClick="openInfo()">
 				<p>The Extroverter</p>
 			</li>
-			<li>
+			<li class="playback-ring"
+				onClick="openInfo()">
 				<p>Playback ring</p>
 			</li>
-			<li>
+			<li class="glasses"
+				onClick="openInfo()">
 				<p>Glasses of perspective</p>
 			</li>
-			<li>
+			<li class="time-zone-equalizer"
+				onClick="openInfo()">
 				<p>Time zone equalizer</p>
 			</li>
-			<li>
+			<li class="teleporter"
+				onClick="openInfo()">
 				<p>Teleporter</p>
 			</li>
-			<li>
+			<li class="translator"
+				onClick="openInfo()">
 				<p>Translator</p>
 			</li>
 		</ul>
 
 
 	</div>
+
+	<script>
+		function openInfo() {
+			console.log('openInfo clicked');
+		}
+	
+	</script>
 
 </body>
 
