--- a/index.html
+++ b/index.html
@@ -26,46 +26,28 @@
 
 	<div class="container">
 		<ul>
-			<li class="inperson-impersonator"
-				onClick="openInfo()">
+			<li class="inperson-impersonator">
 				<p>Inperson impersonator</p>
 			</li>
-			<li class="extroverter"
-				onClick="openInfo()">
+			<li class="extroverter">
 				<p>The Extroverter</p>
 			</li>
-			<li class="playback-ring"
-				onClick="openInfo()">
+			<li class="playback-ring">
 				<p>Playback ring</p>
 			</li>
-			<li class="glasses"
-				onClick="openInfo()">
+			<li class="glasses">
 				<p>Glasses of perspective</p>
 			</li>
-			<li class="time-zone-equalizer"
-				onClick="openInfo()">
+			<li class="time-zone-equalizer">
 				<p>Time zone equalizer</p>
 			</li>
-			<li class="teleporter"
-				onClick="openInfo()">
-				<p>Teleporter</p>
-			</li>
-			<li class="translator"
-				onClick="openInfo()">
+			<li class="translator">
 				<p>Translator</p>
 			</li>
 		</ul>
 
 
 	</div>
-
-	<script>
-		function openInfo() {
-			console.log('openInfo clicked');
-		}
-	
-	</script>
-
 </body>
 
 </html>
