--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 	<div class="container">
 		<ul>
 			<li class="inperson-impersonator">
-				<p>Inperson impersonator</p>
+				<p>Inpersonator</p>
 			</li>
 			<li class="extroverter">
-				<p>The Extroverter</p>
+				<p>Extroverter</p>
 			</li>
 			<li class="playback-ring">
 				<p>Playback ring</p>
