adding team member credits

--- a/index.html
+++ b/index.html
@@ -45,9 +45,18 @@
 				<p>Translator</p>
 			</li>
 		</ul>
-
-
 	</div>
+	<footer class="footer">
+		<div class="container">
+			<p class="text-muted">Team members:</p>
+			<p>Emily</p>
+			<p>Caroline</p>
+			<p>Natalie</p>
+			<p>Rachel</p>
+			<p>Sunny</p>
+			<p>Josh</p>
+		</div>
+	</footer>
 </body>
 
 </html>
