--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
 				<p>Time zone equalizer</p>
 			</li>
 			<li class="translator">
-				<p>Translator</p>
+				<p>Real Talk</p>
 			</li>
 		</ul>
 	</div>
 	<footer class="footer">
 		<div class="container">
-			<p class="text-muted">Team members:</p>
-			<p>Emily</p>
+			<p>Team members:</p>
+			<p>Nicole</p>
 			<p>Caroline</p>
 			<p>Natalie</p>
 			<p>Rachel</p>
 			<p>Sunny</p>
-			<p>Josh</p>
+			<p>Josh S.</p>
 		</div>
 	</footer>
 </body>
