--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- Bootstrap nav bar -->
 	<nav class="navbar navbar-expand">
 		<img class="donut-logo" src="assets/images/donut.png">
-		<a class="navbar-brand" href="#">Team Donut Sword</a>
+		<a class="navbar-brand" href="#">Common Unity Suite</a>
 	</nav>
 
 	<div class="container">
@@ -48,7 +48,7 @@
 	</div>
 	<footer class="footer">
 		<div class="container">
-			<p>Team members:</p>
+			<p>Team donut sword:</p>
 			<p>Nicole</p>
 			<p>Caroline</p>
 			<p>Natalie</p>
